# usd-research

./: README.md  env-fabric.sh
examples/: FabricMesh.usda  FabricSimplePrim.usda  FabricXform.usda  fabricMesh.py  fabricSimplePrim.py  fabricXform.py  usdview
src/: CMakeLists.txt
src/usdFabricSchema/: CMakeLists.txt  fabricMesh.cpp  fabricMesh.h  fabricSimplePrim.cpp  fabricSimplePrim.h  fabricXform.cpp  fabricXform.h  generatedSchema.usda  module.cpp  plugInfo.json  schema.usda  simple.cpp  simple.h  tokens.cpp  tokens.h  wrapFabricMesh.cpp  wrapFabricSimplePrim.cpp  wrapFabricXform.cpp  wrapTokens.cpp
src/usdFabricSimpleSchema/: CMakeLists.txt  __init__.py  module.cpp  plugInfo.json  schema.usda  tokens.h  wrapSimple.cpp  wrapTokens.cpp
